--- a/app/views/folders/new.html.erb
+++ b/app/views/folders/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Folder#new</h1>
-<p>Find me in app/views/folder/new.html.erb</p>
+<h2>Create a new category of questions</h2>
+
+<%= simple_form_for(@folder) do |f| %>
+  <%= f.error_notification %>
+  <%=  f.input :name, placeholder: "History" %>
+  <%= f.button :submit, label: "Book", class: "btn-success"%>
+<% end %>
+
