--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,10 +1,13 @@
 <h2>Your categories</h2>
 
 <% @folders.each do |folder| %>
-  <%= folder.name %>
+  <%= link_to folder.name, folder_path(folder) %>
   <%= link_to "Edit", edit_folder_path(folder.id) %>
   <%= link_to "Delete", folder_path(folder.id), method: :delete %>
   <br>
 <% end %>
+
+<%= link_to @loose_folder.name, folder_path(@loose_folder.id) %>
+<br>
 
 <%= link_to "New Category", new_folder_path %>
