--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Folder#show</h1>
-<p>Find me in app/views/folder/show.html.erb</p>
+<h1> <%= @folder.name.upcase %></h1>
+<%= link_to "New question", new_question_path %>
+<h3>Start test</h3>
+<% unless @folder.questions.empty? %>
+<% @folder.questions.each do |question| %>
+<%= question.description %>
+<%= link_to "Edit", edit_question_path(question.id) %>
+<%= link_to "Delete", question_path(question.id), method: :delete %>
+<% end %>
+<% end %>
