--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -3,8 +3,9 @@
 <%= simple_form_for(@question) do |f| %>
 <%= f.error_notification %>
 <%=  f.input :description, placeholder: "Faust Legend" %>
-<%= f.select(:folder_id,  options_from_collection_for_select(@folders, :id, :name), :prompt => "Select folder (optional)")%>
+<%= f.select(:folder_id,  options_from_collection_for_select(@folders, :id, :name, @folder_selected), :prompt => "Select folder (optional)")%>
 <%= f.input :answer, placeholder: "Faust is the protagonist of a classic German legend, based on the historical Johann Georg Faust"%>
 <%= f.input :source, placeholder: "Wikipedia (optional)"%>
 <%= f.button :submit, class: "btn-success"%>
+<%= link_to t(:back), :back, class: "btn-warning" %>
 <% end %>
